@@ -1,3 +1,4 @@
+10/12/10 migrate GridPanel to phetcommon, deprecate EasyGridBagLayout
 10/12/10 add support for relative anchors to GridPanel, doc where to add Java 1.6 baseline anchors
 10/12/10 migrate FadeOutActivity to piccolo-phet
 10/12/10 decided to keep unused IPlateChargeGridSizeStrategies for historical purposes, noted in javadoc
